<?xml version="1.0" encoding="utf-8"?><!-- Copyright 2020 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/styled_controller_title_tv"
        android:textColor="@color/title_text"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        tools:text="Title of Video"
        android:elevation="10dp"
        android:padding="@dimen/control_padding"
        android:visibility="invisible" />

    <!-- 0dp dimensions are used to prevent this view from influencing the size of
         the parent view if it uses "wrap_content". It is expanded to occupy the
         entirety of the parent in code, after the parent's size has been
         determined. See: https://github.com/google/ExoPlayer/issues/8726.
    -->
    <View
        android:id="@id/exo_controls_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/exo_black_opacity_60"
        tools:ignore="PrivateResource" />


    <FrameLayout
        android:id="@+id/exo_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:maxWidth="@dimen/video_title_max_width"
        android:background="@color/exo_bottom_bar_background"
        android:layoutDirection="ltr"
        tools:ignore="PrivateResource">

        <View
            android:id="@+id/top_cover"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="top"
            android:background="@android:color/transparent" />

        <androidx.media3.ui.DefaultTimeBar
            android:id="@+id/exo_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:paddingVertical="@dimen/exo_styled_bottom_bar_time_padding"
            app:bar_height="@dimen/exo_styled_progress_bar_height"
            tools:ignore="PrivateResource" />

        <LinearLayout
            android:id="@+id/exo_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/exo_styled_bottom_bar_time_padding"
            android:paddingBottom="@dimen/exo_styled_bottom_bar_time_padding">

                <TextView
                    android:id="@id/exo_position"
                    style="@style/ExoStyledControls.TimeText.Position" />

                <TextView
                    android:id="@+id/separator"
                    style="@style/ExoStyledControls.TimeText.Separator" />

                <TextView
                    android:id="@id/exo_duration"
                    style="@style/ExoStyledControls.TimeText.Duration" />



        </LinearLayout>

        <LinearLayout
            android:id="@id/exo_basic_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layoutDirection="ltr"
            android:paddingTop="@dimen/exo_styled_bottom_bar_time_padding">

            <ImageButton
                android:id="@id/exo_settings"
                style="@style/ExoStyledControls.Button.Bottom.Settings"
                android:contentDescription="@string/settings_button_content_description" />

            <ImageButton
                android:id="@+id/exo_volume"
                style="@style/ExoMediaButton.Volume"
                android:contentDescription="@string/volume_button_content_description" />

            <ImageButton
                android:id="@id/exo_cc"
                style="@style/ExoStyledControls.Button.Bottom.CC"
                android:contentDescription="@string/cc_button_content_description" />

            <ImageButton
                android:id="@+id/exo_pip"
                style="@style/ExoMediaButton.Featured.Pip"
                android:contentDescription="@string/pip_button_content_description" />

            <ImageButton
                android:id="@+id/exo_fullscreen"
                style="@style/ExoMediaButton.Featured.FullScreen"
                android:contentDescription="@string/fullscreen_button_content_description" />

            <ImageButton
                android:id="@+id/exo_share"
                style="@style/ExoMediaButton.Featured.Share"
                android:contentDescription="@string/share_button_content_description" />

            <ImageButton
                android:id="@+id/exo_overflow_show"
                style="@style/ExoStyledControls.Button.Bottom.OverflowShow"
                android:contentDescription="@string/overflow_menu_button_content_description" />


        </LinearLayout>

        <HorizontalScrollView
            android:id="@id/exo_extra_controls_scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:visibility="invisible">

            <LinearLayout
                android:id="@id/exo_extra_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr">

                <ImageButton
                    android:id="@id/exo_overflow_hide"
                    style="@style/ExoStyledControls.Button.Bottom.OverflowHide"
                    android:contentDescription="@string/overflow_menu_button_content_description" />

            </LinearLayout>

        </HorizontalScrollView>

    </FrameLayout>


    <LinearLayout
        android:id="@+id/exo_minimal_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/exo_styled_minimal_controls_margin_bottom"
        android:gravity="center_vertical"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        tools:ignore="PrivateResource">

        <ImageButton
            android:id="@+id/exo_minimal_fullscreen"
            style="@style/ExoStyledControls.Button.Bottom.FullScreen"
            android:contentDescription="@string/fullscreen_button_content_description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/exo_center_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:padding="@dimen/exo_styled_controls_padding"
        tools:ignore="PrivateResource">

        <ImageButton
            android:id="@+id/exo_prev_button"
            style="@style/ExoStyledControls.Button.Center.Previous"
            android:contentDescription="@string/prev_button_content_description" />

        <Button
            android:id="@+id/exo_rew_with_amount"
            style="@style/ExoStyledControls.Button.Center.RewWithAmount"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/exo_styled_controls_rewind"
            android:singleLine="false"
            tools:ignore="PrivateResource" />

        <ImageButton
            android:id="@+id/exo_play_pause"
            style="@style/ExoStyledControls.Button.Center.PlayPause"
            android:contentDescription="@string/play_pause_button_content_description" />

        <Button
            android:id="@+id/exo_ffwd_with_amount"
            style="@style/ExoStyledControls.Button.Center.FfwdWithAmount"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@drawable/exo_styled_controls_fastforward"
            android:singleLine="false" />

        <ImageButton
            android:id="@+id/exo_next_button"
            style="@style/ExoStyledControls.Button.Center.Next"
            android:contentDescription="@string/next_button_content_description" />

    </LinearLayout>


</merge>